--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "echo \"No tests yet...\"",
+    "build:production": "npm run clean && npm run build && npm prune --production"
   },
   "dependencies": {
     "@azure/functions": "^4.0.0"
