--- a/.github/workflows/main_umaia-cicd-azure-function.yml
+++ b/.github/workflows/main_umaia-cicd-azure-function.yml
@@ -43,3 +43,4 @@ jobs:
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7E28C4F3602B4B118542EE2A3DD94A95 }}
+          scm-do-build-during-deployment: true
