--- a/.github/workflows/build_on_prs.yml
+++ b/.github/workflows/build_on_prs.yml
@@ -4,19 +4,20 @@ on:
   pull_request:
     branches:
       - main
-
+env:
+  NODE_VERSION: '20.x'
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@v4
     
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Setup Node ${{ env.NODE_VERSION }} Environment
+      uses: actions/setup-node@v3
       with:
-        node-version: '14'
+        node-version: ${{ env.NODE_VERSION }}
     
     - name: Install dependencies
       run: npm install
