--- a/.github/workflows/main_umaia-cicd-azure-function.yml
+++ b/.github/workflows/main_umaia-cicd-azure-function.yml
@@ -14,7 +14,7 @@ env:
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout GitHub Action'
@@ -34,7 +34,15 @@ jobs:
           npm run test --if-present
           npm run build:production --if-present
           popd
-
+  deploy:
+    name: deploy
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ secrets.TOKEN }}
+          approvers: '*'
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
