--- a/.github/workflows/main_umaia-cicd-azure-function.yml
+++ b/.github/workflows/main_umaia-cicd-azure-function.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: trstringer/manual-approval@v1
         with:
           secret: ${{ secrets.TOKEN }}
-          approvers: '*'
+          approvers: UlissesM
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
