--- a/.github/workflows/main_umaia-cicd-azure-function.yml
+++ b/.github/workflows/main_umaia-cicd-azure-function.yml
@@ -38,10 +38,9 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
     needs: build
+    environment: 
+      name: azure
     steps:
-      - uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ secrets.TOKEN }}
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
